# aks2025

./: .gitignore  README.md
sim/: CMakeLists.txt  package.xml
sim/launch/: launch_mavros_sim.py
sim/raceway/: model.sdf
sim/scripts/: arm_vehicle.py
sim/src/: set_velocity.py
sim/worlds/: boxeson.world  sam.world
src/ros_nav/: CMakeLists.txt  package.xml
src/ros_nav/data/: Untitled map- Untitled layer.csv  latitudes.txt  latitudes_minimal.txt  latitudes_spline.txt  longitudes.txt  longitudes_minimal.txt  longitudes_spline.txt
src/ros_nav/src/: coordinate_sorting_algorithm  coordinate_sorting_algorithm.cpp  path_publisher.cpp  rc_simulator.cpp  teleop.py  topic_data.cpp  topicsUI.cpp  trackcoordinates.csv  trackcoordinates.txt  waypoint_nav.py
src/sim/: CMakeLists.txt  package.xml
src/sim/launch/: arm_vehicle.sh  launch_mavros_sim.py
src/sim/raceway/: model.config
src/sim/raceway/meshes/: raceway.mtl
src/sim/scripts/: arm_vehicle.sh
src/sim/src/: set_mode.py  set_velocity.py  setup.cpp  test.py
src/sim/worlds/: samcode.py
